--- a/assets/scss/pages/_article.scss
+++ b/assets/scss/pages/_article.scss
@@ -2,4 +2,9 @@
     .page-content {
         padding-bottom: 0;
     }
+    .page-sitebar {
+        @include media-max($large) {    
+            display: none;
+        }
+    }
 }
