--- a/assets/scss/blocks/_comments.scss
+++ b/assets/scss/blocks/_comments.scss
@@ -2,12 +2,17 @@
     &__head {
         padding: $padding $padding;
         display: flex;
+        flex-wrap: wrap;
         align-items: center;
         color: $link-dark-color;
         background-color: $content-bg-color;
         width: 100%;
         border: none;
         outline: none;
+
+        @include media-max($xx-small) {
+            justify-content: center;
+        }
 
         &--empty {
             cursor: default;
@@ -51,11 +56,21 @@
             font-family: $icon-font;
             margin-left: $padding * 0.5;
             transition: transform $transition;
-        }  
+        }
+        
+        @include media-max($xx-small) {
+            width: 100%;
+            margin: $padding * 0.5 auto 0;
+            transform: translateX(15px);
+        }
     }
 
     &__inner {
         margin-top: $padding * 4;
+
+        @include media-max($x-small) {
+            margin-top: $padding * 2;
+        }
     }
 
     &__item {
@@ -64,6 +79,10 @@
         
         &:not(:last-child) {
             margin-bottom: $padding * 1.5;
+        }
+
+        @include media-max($xx-small) {
+            flex-wrap: wrap;
         }
     }
 
@@ -76,6 +95,13 @@
         margin-top: $padding;
         width: 150px;
         min-width: 150px;
+
+        @include media-max($xx-small) {
+            text-align: left;
+            width: 100%;
+            min-width: 100%;
+            margin-right: 0;
+        }
     }
 
     &__item-name {
@@ -104,22 +130,39 @@
         margin: 0;
         padding: $padding;
         background-color: rgba($accent-color, 0.05);
+
+        @include media-max($xx-small) {
+            margin-top: $padding * 0.75 ;
+        }
     }
 
     &__footer {
         display: flex;
+        flex-wrap: wrap;
         align-items: center;
         margin-top: $padding * 3;
     }
+
 
     &__footer-text {
         margin: 0 $padding;
         font-size: rem(13px);
         line-height: normal;
+        vertical-align: middle;
+
+        @include media-max($medium) {
+            width: 100%;
+            margin: 0;
+            margin-top: $padding;
+        }
     }
 
     &__socials {
-        display: flex;
+        display: inline-flex;
+
+        @include media-max($xx-small) {
+            margin-top: $padding * 0.5;
+        }
     }
 
     &__socials-link {
