--- a/assets/scss/blocks/_arhive-list.scss
+++ b/assets/scss/blocks/_arhive-list.scss
@@ -20,6 +20,15 @@
         }
     }
 
+    @include media-max($xxx-small) {
+        margin-top: 0;
+        margin-bottom: $padding * 2.5;
+
+        &:not(:last-child) {
+            margin-bottom: $padding * 2.5;
+        }
+    }
+
     &__title {
        margin-bottom: $padding * 2;
     }
