--- a/assets/scss/blocks/_article-prew.scss
+++ b/assets/scss/blocks/_article-prew.scss
@@ -120,5 +120,9 @@
 
     .page-title-h1 {
         margin-top: -10px;
+
+        @include media-max($xxx-small) {
+            margin-top: 0;
+        }
     }
 }
