--- a/assets/scss/blocks/_carousel.scss
+++ b/assets/scss/blocks/_carousel.scss
@@ -5,21 +5,27 @@
 .carousel {
     width: 100%;
     
-    &--large {
-        .carousel__cell {
-            height: 401px;
-            @include media-max($large) {    
-                height: 343px;
-            }
-        }
-    }
+    // &--large {
+    //     .carousel__cell {
+    //         height: auto;
+    //         @include media-max($large) {    
+    //             height: 350px;
+    //         }
+    //         @include media-max($medium) {    
+    //             height: 266px;
+    //         }
+    //         @include media-max($small) {    
+    //             height: auto;
+    //         }
+    //     }
+    // }
 
     &--main {
         margin-top: -5px;
     }
 
     &__cell {
-        height: 408px;
+        height: auto;
         align-items: center;
         background-color: $content-bg-color;
         display: -webkit-box;
@@ -29,9 +35,15 @@
         margin-right: 1rem;
         width: 100%; 
 
-        @include media-max($large) {    
-            height: 353px;
-        }
+        // @include media-max($large) {    
+        //     height: 329px;
+        // }
+        // @include media-max($medium) {    
+        //     height: 353px;
+        // }
+        // @include media-max($small) {    
+        //     height: auto;
+        // }
     }
 
     &__image {
