--- a/assets/scss/blocks/_news.scss
+++ b/assets/scss/blocks/_news.scss
@@ -4,10 +4,6 @@
     max-width: 257px;
     position: relative;
 
-    @include media-max($large) {    
-        margin: 0 $padding 0;
-    }
-
     &--separator {
         padding-bottom: $padding / 1.75;
 
@@ -43,6 +39,7 @@
     &__photo-img {
         max-width: 100%;
         display: block;
+        height: auto;
     }
 
     &__title {
@@ -78,15 +75,15 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    justify-content: flex-start;
 
     @include media-max($large) {    
         flex-direction: row;
-        justify-content: space-between;
-        margin-left: -$padding;
-        margin-right: -$padding;
+        margin-left: -$padding * 0.5;
+        margin-right: -$padding * 0.5;
     }
 
-    @include media-max($x-small) {
+    @include media-max($xx-small) {
         justify-content: center;
     }
 
@@ -95,9 +92,21 @@
         margin-bottom: $padding * 2;
 
         @include media-max($large) {  
-            margin-left: $padding;   
+            margin-left: $padding * 0.5;   
+        }
+
+        @include media-max($xx-small) {  
+            margin-left: 0; 
+            justify-content: center;  
         }
     }  
+
+    .news {
+        @include media-max($medium) {  
+            margin-left: $padding * 0.5;
+            margin-right: $padding * 0.5;
+        }
+    }
 }
 
 .events-list {
@@ -107,27 +116,31 @@
     
     @include media-max($large) {    
         flex-direction: row;
-        justify-content: space-between;
-        margin-left: -$padding;
-        margin-right: -$padding;
+        margin-left: -$padding * 0.5;
+        margin-right: -$padding * 0.5;
     }
 
-    @include media-max($x-small) {
+    @include media-max($xx-small) {
         justify-content: center;
     }
     
     &__title {
-        margin-bottom: $padding * 2.75;
         width: 100%;
+        margin-bottom: $padding * 2;
 
         @include media-max($large) {  
-            margin-left: $padding;  
-            margin-bottom: $padding * 1; 
+            margin-left: $padding * 0.5;   
         }
-    }
+
+        @include media-max($xx-small) {  
+            margin-left: 0;   
+            justify-content: center;  
+        }
+    }  
 
     .news {
         margin-top: $padding;
+
         &:first-of-type {
             margin-top: 0;
         }
@@ -139,11 +152,14 @@
                 margin-bottom: $padding * 2;
             }
         }
+        @include media-max($medium) {  
+            margin: 0 $padding * 0.5 $padding;
+        }
     }
 }
 
 .news-sitebar {
-    @include media-max($large) {    
+    @include media-max($small) {    
         order: 3
     }
 }
