--- a/assets/scss/components/_text-block.scss
+++ b/assets/scss/components/_text-block.scss
@@ -45,10 +45,10 @@
             margin-bottom: $padding * 1.75;
             margin-right: $padding * 2;
 
-            @include media-max($x-small) {
+            @include media-max($small) {
                 float: none;
+                margin: 0 auto;
                 margin-bottom: $padding * 1.25;
-                margin-right: 0;
             }
         }
     }
@@ -110,6 +110,10 @@
             padding-left: $padding * 3;
         }
 
+        @include media-max(425px) {    
+            padding-left: $padding * 2;
+        }
+
         li {
             position: relative;
 
@@ -140,6 +144,10 @@
         @include media-max($small) {    
             margin: $padding * 2.25 0;
             padding-left: $padding * 3;
+        }
+
+        @include media-max(425px) {    
+            padding-left: $padding * 2;
         }
 
         li {
