--- a/assets/scss/components/_page.scss
+++ b/assets/scss/components/_page.scss
@@ -18,6 +18,9 @@
         max-width: $medium;
     }
     @include media-max($medium) {
+        max-width: 830px;
+    }
+    @include media-max(830px) {
         max-width: $small;
     }
     @include media-max($small) {
