--- a/assets/scss/general/_includes.scss
+++ b/assets/scss/general/_includes.scss
@@ -8,11 +8,13 @@
 @import "../components/page";
 
 // blocks
-@import "blocks/header";
+@import "blocks/button-menu";
 @import "blocks/logo";
 @import "blocks/main-menu";
 @import "blocks/languages";
 @import "blocks/link-arrow";
+@import "blocks/mobl-menu";
+@import "blocks/header";
 @import "blocks/comments";
 @import "blocks/data&comments";
 @import "blocks/article-prew";
