--- a/assets/scss/blocks/_logo.scss
+++ b/assets/scss/blocks/_logo.scss
@@ -1,6 +1,5 @@
 .logo {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 
@@ -10,9 +9,13 @@
     
     &__img {
         display: block;
-        max-width: 100%;
-        width: 180px;
+        max-width: 180px;
+        width: 100%;
         height: auto;
+
+        @include media-max($large) {
+            max-width: 123px;
+        }
     }
 
     &__content {
@@ -22,10 +25,8 @@
         font-weight: 100;
         line-height: 1;
 
-        @include media-max($x-small) {
-            width: 100%;
-            margin: 0;
-            margin-top: $padding;
+        @include media-max($xxx-small) {
+            margin-left: $padding;
         }
     }
 
