--- a/assets/scss/blocks/_mobl-menu.scss
+++ b/assets/scss/blocks/_mobl-menu.scss
@@ -29,12 +29,15 @@
 
     &__close-btn {
         border: 0;
-        padding: $padding * 0.5;
+        padding: 0;
+        width: 48px;
+        height: 48px;
+        text-align: center;
         background-color: transparent;
         display: inline-block;
         position: absolute;
-        right: $padding * 0.5;
-        top: 4px;
+        right: 0;
+        top: 0;
     }
 
     &__close-btn__icon {
@@ -65,7 +68,7 @@
                 color: $breadcrumbs-color;
                 position: absolute;
                 display: block;
-                top: 0;
+                top: 3px;
                 right: $padding;
                 transition: transform $transition;
             }
