--- a/assets/scss/blocks/_button-menu.scss
+++ b/assets/scss/blocks/_button-menu.scss
@@ -5,8 +5,7 @@
     font-size: rem(16px);
     display: flex;
     align-items: center;
-    padding: $padding * 0.35;  
-    padding-left: 0; 
+    padding: $padding * 0.875 $padding;  
 
     &__icon {
         font-size: rem(20px);
