--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10761,6 +10761,62 @@ readers do not read off random characters that represent icons */
   margin-top: 16px;
 }
 
+.schedule-table-wrap {
+  width: 100%;
+  overflow: auto;
+  position: relative;
+}
+
+.schedule {
+  min-width: 700px;
+  width: 100%;
+  border-left: 1px solid #F2C94C;
+  border-top: 1px solid #F2C94C;
+}
+.schedule__row {
+  border-bottom: 1px solid #F2C94C;
+}
+.schedule__cell {
+  vertical-align: top;
+  padding: 3px 0 6px 0;
+  border-right: 1px solid #F2C94C;
+  width: 18.5%;
+}
+.schedule__cell:first-of-type {
+  width: 7.5%;
+  min-width: 80px;
+  font-weight: 500;
+  font-size: 1rem;
+  padding-top: 8px;
+  text-transform: uppercase;
+  text-align: center;
+  border-right: 2px solid #F2C94C;
+}
+.schedule__head {
+  text-align: left;
+}
+.schedule__head .schedule__cell {
+  font-weight: 700;
+  font-size: 0.75rem;
+  padding: 7px 0 6px 8px;
+  text-transform: uppercase;
+}
+.schedule__head .schedule__row {
+  border-bottom: 2px solid #F2C94C;
+}
+
+.schedule__table-small {
+  width: 100%;
+}
+.schedule__table-small__row:nth-child(even) {
+  background-color: #f7f7f7;
+}
+.schedule__table-small__cell {
+  padding: 0 4px 0 8px;
+  line-height: 25px;
+  height: 25px;
+}
+
 .page--index .page-content {
   padding-top: 36px;
 }
