--- a/resources/scss/general/_includes.scss
+++ b/resources/scss/general/_includes.scss
@@ -29,7 +29,7 @@
 @import "blocks/album-prev";
 @import "blocks/album";
 @import "blocks/classes";
-
+@import "blocks/schedule";
 
 // Pages
 @import "../pages/index";
