--- a/resources/scss/blocks/_classes.scss
+++ b/resources/scss/blocks/_classes.scss
@@ -64,6 +64,10 @@
             }
         }
 
+        &--full {
+            width: 100%;
+        }
+
         @include media-max($medium) {
             width: 80%;
             margin-bottom: $padding;
