--- a/resources/scss/general/_includes.scss
+++ b/resources/scss/general/_includes.scss
@@ -8,28 +8,29 @@
 @import "../components/page";
 
 // blocks
-@import "blocks/button-menu";
-@import "blocks/logo";
-@import "blocks/main-menu";
-@import "blocks/languages";
-@import "blocks/link-arrow";
-@import "blocks/mobl-menu";
-@import "blocks/header";
-@import "blocks/comments";
-@import "blocks/data&comments";
-@import "blocks/article-prew";
-@import "blocks/article";
-@import "blocks/news";
-@import "blocks/carousel";
-@import "blocks/footer";
-@import "blocks/breadcrumbs";
-@import "blocks/others-list";
-@import "blocks/pagination";
-@import "blocks/archive-list";
-@import "blocks/album-prev";
-@import "blocks/album";
-@import "blocks/classes";
-@import "blocks/schedule";
+@import "../blocks/button-menu";
+@import "../blocks/logo";
+@import "../blocks/main-menu";
+@import "../blocks/languages";
+@import "../blocks/link-arrow";
+@import "../blocks/mobl-menu";
+@import "../blocks/header";
+@import "../blocks/comments";
+@import "../blocks/data&comments";
+@import "../blocks/article-prew";
+@import "../blocks/article";
+@import "../blocks/news";
+@import "../blocks/carousel";
+@import "../blocks/footer";
+@import "../blocks/breadcrumbs";
+@import "../blocks/others-list";
+@import "../blocks/pagination";
+@import "../blocks/archive-list";
+@import "../blocks/album-prev";
+@import "../blocks/album";
+@import "../blocks/classes";
+@import "../blocks/teachers";
+@import "../blocks/schedule";
 
 // Pages
 @import "../pages/index";
