--- a/resources/scss/config/_colors.scss
+++ b/resources/scss/config/_colors.scss
@@ -22,7 +22,7 @@ $font-color-accent: #0299eb;
 
 $link-dark-color: #292828;
 $success-color: #2db86e;
-$error-color: $accent-color;
+$error-color: $accent-color-2;
 
 $border-color: #dbe7f3;
 
