--- a/resources/scss/general/_includes.scss
+++ b/resources/scss/general/_includes.scss
@@ -8,6 +8,7 @@
 @import "../components/page";
 
 // blocks
+@import "../blocks/input-field";
 @import "../blocks/button-menu";
 @import "../blocks/logo";
 @import "../blocks/main-menu";
@@ -31,6 +32,8 @@
 @import "../blocks/classes";
 @import "../blocks/teachers";
 @import "../blocks/schedule";
+@import "../blocks/contacts";
+@import "../blocks/contact-item";
 
 // Pages
 @import "../pages/index";
