--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9097,6 +9097,63 @@ readers do not read off random characters that represent icons */
   height: 100%;
 }
 
+.input-field__input {
+  padding: 16px;
+  background-color: #F0F0F0;
+  box-shadow: none;
+  border: 1px solid rgba(0, 0, 0, 0.11);
+  font-size: 1rem;
+  width: 100%;
+}
+.input-field__input::-webkit-input-placeholder {
+  color: #000;
+}
+.input-field__input::-moz-placeholder {
+  color: #000;
+}
+.input-field__input:-ms-input-placeholder {
+  color: #000;
+}
+.input-field__input::-ms-input-placeholder {
+  color: #000;
+}
+.input-field__input::placeholder {
+  color: #000;
+}
+.input-field__error {
+  display: inline-block;
+  margin-top: 6px;
+  color: #EB5757;
+  line-height: 1.2;
+}
+
+.textarea {
+  height: 130px;
+  resize: none;
+  max-height: 130px;
+  padding: 16px;
+  background-color: #F0F0F0;
+  box-shadow: none;
+  border: 1px solid rgba(0, 0, 0, 0.11);
+  font-size: 1rem;
+  width: 100%;
+}
+.textarea::-webkit-input-placeholder {
+  color: #000;
+}
+.textarea::-moz-placeholder {
+  color: #000;
+}
+.textarea:-ms-input-placeholder {
+  color: #000;
+}
+.textarea::-ms-input-placeholder {
+  color: #000;
+}
+.textarea::placeholder {
+  color: #000;
+}
+
 .button-menu {
   border: none;
   background-color: transparent;
@@ -10943,6 +11000,93 @@ readers do not read off random characters that represent icons */
   padding: 0 4px 0 8px;
   line-height: 25px;
   height: 25px;
+}
+
+.page-contact {
+  width: 100%;
+}
+
+.contacts-list {
+  display: flex;
+  margin-left: -16px;
+  margin-right: -16px;
+}
+
+.contacts-actions {
+  display: flex;
+  margin-top: 32px;
+}
+
+.contact-form {
+  width: 47%;
+  margin-right: 3%;
+}
+.contact-form__title {
+  font-size: 1.75rem;
+  font-weight: 900;
+  margin: 0 0 16px 0;
+}
+.contact-form__row {
+  display: flex;
+  margin-bottom: 20px;
+}
+.contact-form__field {
+  width: 48%;
+}
+.contact-form__field:first-child {
+  margin-right: auto;
+}
+.contact-form__button {
+  margin: 16px 0 0 0;
+}
+.contact-form__alerts {
+  margin: 0;
+  margin-top: 16px;
+}
+.contact-form__alert-error {
+  display: block;
+  color: #EB5757;
+}
+.contact-form__alert-success {
+  display: block;
+  color: #2db86e;
+}
+
+.map {
+  width: 50%;
+}
+
+.contact-item {
+  font-size: 1.25rem;
+  width: 32%;
+  max-width: 341px;
+  border: 6px solid #FFF1B1;
+  margin: 0 16px 0;
+  padding: 28px 8px 28px 28px;
+}
+.contact-item__title {
+  font-size: 1.5rem;
+  font-weight: 900;
+  margin: 0;
+}
+.contact-item__name {
+  margin: 12px 0 28px;
+}
+.contact-item__phone {
+  display: block;
+  padding: 2px;
+}
+.contact-item__phone:hover .contact-item__icon {
+  opacity: 0.85;
+}
+.contact-item__icon {
+  font-size: 1.125rem;
+  color: #F2C94C;
+  margin-right: 12px;
+  transition: opacity ease 0.15s;
+  width: 15px;
+  height: 15px;
+  text-align: center;
 }
 
 .page--index .page-content {
